Added Firebase authentication implementation.

--- a/TourGuideApp/TourGuideApp.Android/TourGuideApp.Android.csproj
+++ b/TourGuideApp/TourGuideApp.Android/TourGuideApp.Android.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DroidModule.cs" />
+    <Compile Include="Services\FirebaseAuthenticatorService.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
