--- a/TourGuideApp/TourGuideApp.iOS/TourGuideApp.iOS.csproj
+++ b/TourGuideApp/TourGuideApp.iOS/TourGuideApp.iOS.csproj
@@ -96,7 +96,9 @@
     <Compile Include="IOSModule.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="Services\FirebaseAuthenticatorService.cs" />
     <None Include="Entitlements.plist" />
+    <BundleResource Include="GoogleService-Info.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -154,6 +156,9 @@
   <ItemGroup>
     <PackageReference Include="Autofac">
       <Version>4.9.2</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Firebase.iOS.Auth">
+      <Version>5.0.4.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
