--- a/TourGuideApp/TourGuideApp.Android/TourGuideApp.Android.csproj
+++ b/TourGuideApp/TourGuideApp.Android/TourGuideApp.Android.csproj
@@ -52,6 +52,12 @@
     <PackageReference Include="Autofac">
       <Version>4.9.2</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Analytics">
+      <Version>1.14.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Crashes">
+      <Version>1.14.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Firebase.Auth">
       <Version>60.1142.1</Version>
     </PackageReference>
