--- a/TourGuideApp/TourGuideApp.iOS/TourGuideApp.iOS.csproj
+++ b/TourGuideApp/TourGuideApp.iOS/TourGuideApp.iOS.csproj
@@ -156,6 +156,12 @@
     <PackageReference Include="Autofac">
       <Version>4.9.2</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Analytics">
+      <Version>1.14.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Crashes">
+      <Version>1.14.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Firebase.iOS.Auth">
       <Version>5.0.4.1</Version>
     </PackageReference>
